Fix: `Task` assignment truncate longer user name

--- a/src/modules/core/components/Assignment/Assignment.css
+++ b/src/modules/core/components/Assignment/Assignment.css
@@ -66,6 +66,8 @@
 
 .assigneeName {
   composes: display;
+  composes: inlineEllipsis from '~styles/text.css';
+  max-width: 32ch;
   font-size: var(--size-normal);
   font-weight: var(--weight-medium);
 }
